fix: attribution wcag in dark mode

--- a/html/styles.css
+++ b/html/styles.css
@@ -308,3 +308,7 @@ footer p {
 #stationList tr.red {
   background: rgba(255, 0, 0, 0.2);
 }
+
+.maplibregl-ctrl-attrib {
+  color: black;
+}
